--- a/Kompax/en.lproj/mainstoryboard.storyboard
+++ b/Kompax/en.lproj/mainstoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="JUo-uL-NzN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="rFr-Ei-Qjn">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -242,6 +242,20 @@
                                 <color key="textColor" red="0.36078431370000003" green="0.58039215690000001" blue="0.76470588240000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" contentMode="left" text="现金" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ClL-Hd-LQe">
+                                <rect key="frame" x="20" y="137" width="280" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xmV-Da-YkW">
+                                <rect key="frame" x="20" y="190" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <connections>
@@ -251,7 +265,9 @@
                     <nil key="simulatedStatusBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="accountLabel" destination="ClL-Hd-LQe" id="2VH-4R-L4h"/>
                         <outlet property="cash" destination="z81-em-eYG" id="0BJ-3G-25X"/>
+                        <outlet property="timeLabel" destination="xmV-Da-YkW" id="FWJ-ey-bkM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N18-pK-nfV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -547,6 +563,49 @@
             </objects>
             <point key="canvasLocation" x="484" y="-189"/>
         </scene>
+        <!--Account Table View Controller - 账户-->
+        <scene sceneID="qAU-KT-HHs">
+            <objects>
+                <tableViewController id="eNh-NW-7fS" customClass="KOMAccountTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="1zg-Zi-tae">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="o9G-7p-0gb">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="账户" id="3Dz-A6-CgL"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nXc-er-XxQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2194" y="-638"/>
+        </scene>
+        <!--Account Nav View Controller-->
+        <scene sceneID="pCt-c2-lMl">
+            <objects>
+                <navigationController storyboardIdentifier="AccNav" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kJ1-h6-djV" customClass="KOMAccountNavViewController" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XXf-uO-gQ1">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="eNh-NW-7fS" kind="relationship" relationship="rootViewController" id="q11-gP-vnf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d2L-JH-X1H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1660" y="-638"/>
+        </scene>
         <!--Income View Controller-->
         <scene sceneID="8IO-WN-U0a">
             <objects>
@@ -660,22 +719,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7m4-a4-sTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1216" y="-644"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Qhz-o2-JDL">
-            <objects>
-                <viewController id="NbN-Zl-DhJ" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hHl-yj-EPg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2bR-vG-5ID" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1656" y="-644"/>
         </scene>
         <!--KOMLoginViewController-->
         <scene sceneID="5">
@@ -930,6 +973,12 @@
         <image name="注册－确认按钮.png" width="105" height="33"/>
     </resources>
     <classes>
+        <class className="KOMAccountNavViewController" superclassName="UINavigationController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMAccountNavViewController.h"/>
+        </class>
+        <class className="KOMAccountTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMAccountTableViewController.h"/>
+        </class>
         <class className="KOMAccountingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMAccountingViewController.h"/>
             <relationships>
@@ -945,7 +994,10 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCostViewController.h"/>
             <relationships>
                 <relationship kind="action" name="bgTap:"/>
+                <relationship kind="outlet" name="accountLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="cash" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="datePicker" candidateClass="UIDatePicker"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="KOMCreditViewController" superclassName="UIViewController">
@@ -960,10 +1012,7 @@
         <class className="KOMLoginViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMLoginViewController.h"/>
             <relationships>
-                <relationship kind="action" name="backgroundTap:"/>
-                <relationship kind="action" name="changeOpenStatus:"/>
                 <relationship kind="action" name="login:"/>
-                <relationship kind="action" name="textFieldDoneEditing:"/>
                 <relationship kind="outlet" name="goButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="mailField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="openButton" candidateClass="UIButton"/>
