--- a/Kompax/en.lproj/mainstoryboard.storyboard
+++ b/Kompax/en.lproj/mainstoryboard.storyboard
@@ -1232,6 +1232,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                             <constraint firstAttribute="width" constant="44" id="HH4-2W-DO2"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" red="0.65490196078431373" green="0.6705882352941176" blue="0.6705882352941176" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="left" text="季" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ei8-p7-4Ci">
@@ -1240,6 +1241,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                             <constraint firstAttribute="width" constant="44" id="opE-ym-Ghy"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" red="0.65490196079999996" green="0.6705882353" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="left" text="年" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PP3-kr-9Or">
@@ -1248,6 +1250,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                             <constraint firstAttribute="width" constant="44" id="ev3-pF-ZNs"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <color key="textColor" red="0.65490196079999996" green="0.6705882353" blue="0.6705882353" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -1320,6 +1323,8 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <outlet property="category_2" destination="MiB-yL-ZW9" id="2wK-Bz-qSK"/>
                         <outlet property="category_3" destination="xSl-df-LcE" id="czl-qy-KPx"/>
                         <outlet property="firstBorrowTimeText" destination="BTh-IW-Gbe" id="5gD-NZ-OXd"/>
+                        <outlet property="firstLabel" destination="rSk-xu-KCj" id="Fba-6e-zkf"/>
+                        <outlet property="freLabel" destination="v1d-5Y-1l7" id="dyV-ed-cxb"/>
                         <outlet property="interestText" destination="1CN-21-O4J" id="t1W-Sm-3Zs"/>
                         <outlet property="monthLabel" destination="weZ-4Q-b5e" id="QtC-lF-1aQ"/>
                         <outlet property="repayYearsText" destination="8cD-v2-mj4" id="27y-LP-rr2"/>
@@ -2014,6 +2019,157 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="时间.png" width="17" height="17"/>
         <image name="注册－确认按钮.png" width="105" height="33"/>
     </resources>
+    <classes>
+        <class className="KOMAccountTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMAccountTableViewController.h"/>
+        </class>
+        <class className="KOMAccountingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMAccountingViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backgroundTap:"/>
+                <relationship kind="action" name="changeOpenStatus:"/>
+                <relationship kind="outlet" name="accView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="inputTextField" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="openButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="tb" candidateClass="TableViewWithBlock"/>
+            </relationships>
+        </class>
+        <class className="KOMBarDraw" superclassName="UIControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMBarDraw.h"/>
+        </class>
+        <class className="KOMCategoryTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCategoryTableViewController.h"/>
+        </class>
+        <class className="KOMCircleDraw" superclassName="UIControl">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCircleDraw.h"/>
+        </class>
+        <class className="KOMCostViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCostViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="accountLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cash" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="categoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="memberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="KOMCreditViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCreditViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="accountLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cash" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="debitorLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="memberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="KOMCreditorTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMCreditorTableViewController.h"/>
+        </class>
+        <class className="KOMDebitViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMDebitViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="bgTap:"/>
+                <relationship kind="outlet" name="accountLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cash" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="categoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="creditorLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="KOMDebitorTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMDebitorTableViewController.h"/>
+        </class>
+        <class className="KOMIncomeCategoryTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMIncomeCategoryTableViewController.h"/>
+        </class>
+        <class className="KOMIncomeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMIncomeViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="bgTap:"/>
+                <relationship kind="outlet" name="accountLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="cash" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="categoryLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="memberLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="KOMLoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMLoginViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="login:"/>
+                <relationship kind="outlet" name="goButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="mailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="openButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="passwordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordText" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="rememberText" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="tb" candidateClass="TableViewWithBlock"/>
+            </relationships>
+        </class>
+        <class className="KOMMainPageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMMainPageViewController.h"/>
+        </class>
+        <class className="KOMMemberTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMMemberTableViewController.h"/>
+        </class>
+        <class className="KOMNavViewController" superclassName="UINavigationController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMNavViewController.h"/>
+        </class>
+        <class className="KOMPagingSwipeViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMPagingSwipeViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+        <class className="KOMRegisterViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMRegisterViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="backgroundTap:"/>
+                <relationship kind="action" name="textFieldDoneEditing:"/>
+                <relationship kind="outlet" name="againText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="mailText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="passwordText" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="KOMRepaymentViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMRepaymentViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="cashText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="category_1" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="category_2" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="category_3" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="firstBorrowTimeText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="firstLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="freLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="interestText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="monthLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="repayYearsText" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="seasonLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="yearLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="KOMSettingViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMSettingViewController.h"/>
+        </class>
+        <class className="KOMTabBarViewController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMTabBarViewController.h"/>
+        </class>
+        <class className="KOMTimePickerViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/KOMTimePickerViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="timeLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="timePicker" candidateClass="UIDatePicker"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="TableViewWithBlock" superclassName="UITableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TableViewWithBlock.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
